@@ -29,6 +29,8 @@ Version 1.4.6:
 		- Thanks to @brunoais for creating.
 	Added galician and catalan translations and updated Spaish translation.
 		- Thanks to @FranSobrino for translating.
+	Fixed bug with FF causing newline to appear when something is typed.
+		- Thanks to @q2apro for reporting.
 
 Version 1.4.5:
 	Added command shortcuts to tooltips.
